policy/container-deny-not-allowed-labels/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  creationTimestamp: null
  name: containerdenynotallowedlabels
spec:
  crd:
    spec:
      names:
        kind: ContainerDenyNotAllowedLabels
      validation:
        openAPIV3Schema:
          properties:
            labels:
              items:
                type: object
              type: array
  targets:
  - libs:
    - |-
      package k8s

      default is_gatekeeper = false

      has_field(obj, field) {
        not object.get(obj, field, "N_DEFINED") == "N_DEFINED"
      }

      missing_field(obj, field) {
        obj[field] == ""
      }

      missing_field(obj, field) {
        not has_field(obj, field)
      }

      is_gatekeeper {
        has_field(input, "review")
        has_field(input.review, "object")
      }

      resource = input.review.object {
        is_gatekeeper
      }

      resource = input {
        not is_gatekeeper
      }

      parameters = data.parameters {
        not is_gatekeeper
      }

      parameters = input.parameters {
        is_gatekeeper
      }

      input_containers[c] {
        c := resource.spec.containers[_]
      }

      input_containers[c] {
        c := resource.spec.initContainers[_]
      }

      input_containers[c] {
        c := resource.spec.template.spec.containers[_]
      }

      input_containers[c] {
        c := resource.spec.template.spec.initContainers[_]
      }

      contains_label(labels, label) {
        labels[_] == label
        #labels[_].value == label.allowedvalue
      } else = false {
        true
      }

      not_contains_label(labels, label) {
        not contains_label(labels, label)
      }

      definedLabels := {[label, value] | some label; value := resource.metadata.labels[label]}
    rego: |-
      package container_deny_not_allowed_labels

      import data.k8s as common

      allowedLabels := {[label, value] | some index; label := common.parameters.labels[index].key; value := common.parameters.labels[index].allowedvalue}


      violation[{"msg": msg, "details": {}}] {
        # always the allowed labels will be larger than the defined labels
        #some i
        common.not_contains_label(allowedLabels, common.definedLabels[i])
        msg := sprintf("label '%v':'%v', is not allowed.", [common.definedLabels[i][0], common.definedLabels[i][1]])
      }
    target: admission.k8s.gatekeeper.sh
status: {}
